## Process this file with automake to create Makefile.in
#
# Copyright (c) 2010 Tama Communications Corporation
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
images_DATA = file.png folder-closed.png folder.png minus.png plus.png \
	treeview-black-line.png treeview-black.png treeview-default-line.png \
	treeview-default.png treeview-famfamfam-line.png treeview-famfamfam.png \
	treeview-gray-line.png treeview-gray.png treeview-red-line.png \
	treeview-red.png

imagesdir = ${datadir}/gtags/jquery/images

EXTRA_DIST = ${images_DATA}
